Fix vertical spacing on live-progress-reporting.php

--- a/www/static/css/quad.css
+++ b/www/static/css/quad.css
@@ -12,6 +12,10 @@ iframe {
 .container .row {
     height: 100%;
 }
+.quad.quad-100 {
+    height: 100vh;
+    min-height: 600px;
+}
 .quad {
     padding: 4px;
     position: relative;
